5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4082/executions/1578_1333.log
== SUBMITION (2019-03-12 15:36:29) 
-- CODE:
expressao = 30 – 3 ** 2 + 8 // 3 ** 2 * 10
print(453.3)
-- EXECUTION TIME:
0.139791
-- ERROR:
  File "/home/codebench/codes/1578/1333/main.py", line 1
    expressao = 30 \u2013 3 ** 2 + 8 // 3 ** 2 * 10
                   ^
SyntaxError: invalid character in identifier

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 11:48:47) 
-- CODE:
expressao = 30-3**2+8**2*10
print(1740)
-- EXECUTION TIME:
0.222876
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
1740
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-18 19:05:41) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print (30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.186692
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
